<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.jikexueyuan.cloudnote.view.UserRegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:navigationIcon="@drawable/actionbar_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/regist_title"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/login_background" />

    <LinearLayout
        android:id="@+id/login_button_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/account_str"
            android:textColor="@color/footerText"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:digits="@string/account_digits"
            android:gravity="center|left"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="18"
            android:paddingLeft="6dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColor="@color/footerText"
            android:textSize="17sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:src="@color/colorAbs" />

    <LinearLayout
        android:id="@+id/register_button_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/password_str"
            android:textColor="@color/footerText"
            android:textSize="17sp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center|left"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="6dp"
            android:paddingRight="10dp"
            android:textColor="@color/footerText"
            android:textSize="17sp" />

    </LinearLayout>

    <Button
        android:id="@+id/register_now"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/blue_button_bg_selector"
        android:onClick="registerOnClick"
        android:text="@string/register_now"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>
