<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_note_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jikexueyuan.cloudnote.view.NoteEditActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:navigationIcon="@drawable/actionbar_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/actionbar_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="noteEditOnClick"
                android:paddingRight="15dp"
                android:text="@string/menu_complete"
                android:textColor="@color/white"
                android:textSize="18.0sp" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/empty_title_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"
        android:maxLength="80"
        android:padding="8dp"
        android:textColor="@color/colorTitle"
        android:textColorHint="@color/colorHint"
        android:textSize="18.0sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_grey" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/edit_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/empty_content"
            android:padding="8dp"
            android:textColorHint="@color/colorHint"
            android:textSize="16.0sp" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/viewer_footer_bar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@drawable/footer_bg">

        <ImageView
            android:id="@+id/insert_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="noteEditOnClick"
            android:padding="10dp"
            android:src="@drawable/insert_image" />

        <View
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/insert_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="noteEditOnClick"
            android:padding="10dp"
            android:src="@drawable/insert_camera" />
    </LinearLayout>

</LinearLayout>
